tests/parsing/smtlib/mcil/errors/261_check-system_bad_attribute_4.mcil
(check-system sys :reachable (r (= 1 1)) :trans)